# null-db

./: .gitignore  Cargo.toml  README.md
all-memory-kv/: Cargo.toml
all-memory-kv/src/: main.rs  network.rs
cli/: Cargo.toml
cli/src/: main.rs  null_client.rs
database/: 0-1678247547788.nullsegment  1-1661053960.543084s.nullsegment  1-1661741099.995035s.nullsegment  1-1678247642.93985389s.nullsegment  Cargo.toml  Dockerfile  Tiltfile  build.rs  compose.yaml  null.database  schema_example.json
database/k8s/: node1.yaml  node2.yaml  node3.yaml
database/proto/: message.proto
database/recources/test-segments/: 1-1.nullsegment  1-2.nullsegment  2-1.nullsegment
database/src/: errors.rs  file_compactor.rs  file_reader.rs  main.rs  nulldb.rs  record.rs  utils.rs
database/src/file/: mod.rs
database/src/index/: mod.rs
database/src/raft/: candidate.rs  config.rs  follower.rs  grpcserver.rs  leader.rs  mod.rs
disk-btree/: Cargo.toml
disk-log/: Cargo.toml  null.database
disk-log-segments/src/: main.rs
disk-sstables/: Cargo.toml
disk-sstables/src/: main.rs
example-databases/go/: README.md
example-databases/python/: requirements.txt
experiments/iocost/: Cargo.toml  testfile
experiments/multithreaded-single-file-disk-write/: Cargo.toml  (+1 more)
html-test/: Cargo.toml
log-segments/: 0-1651075433.101775s.nullsegment  0-1651117040.542847s.nullsegment  0-1651117232.403168s.nullsegment  1-1653197526.199375s.nullsegment  2-1653197945.180159s.nullsegment  3-1653244507.877461s.nullsegment  null.database
python/: README.md
rust/: Cargo.toml  README.md  null.db
(+60 files in other folders)
